Set background image for the footer to none on small devices, to stop stretching of the background image

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -146,7 +146,8 @@ p{
 
 #footer {
     background-attachment: fixed;
-    background-color: rgba(125, 106, 84, 0.76);
+    background-color: rgba(82, 82, 82, 0.4);
+    background-image: none;
     background-position: bottom;
     background-size: cover;
     -webkit-background-size: cover;
